# pLM-covariance-pooling

./: .gitignore  CLAUDE.md  README.md  colab_embedding_extraction.ipynb  colab_run_experiments.ipynb  colab_run_experiments_speed_improvement.ipynb  colab_run_remaining_experiments.ipynb  colab_run_sqrt_experiments.ipynb  create_embs_ProtT5_per_residue.ipynb  environment.yml  project-2-explanation.md  pyproject.toml
configs/: deeploc_cov_dc32.yaml  deeploc_mean.yaml  meltome_cov_dc32.yaml  meltome_mean.yaml
configs/deeploc2/: attention_cov.yaml  attention_cov_sqrt.yaml  cov_pca.yaml  cov_supervised.yaml  cov_supervised_sqrt.yaml  cov_unsupervised.yaml  hybrid.yaml  light_attention.yaml  mean.yaml
configs/meltome/: attention_cov.yaml  attention_cov_sqrt.yaml  cov_pca.yaml  cov_supervised.yaml  cov_supervised_sqrt.yaml  cov_unsupervised.yaml  hybrid.yaml  light_attention.yaml  mean.yaml
configs/scl/: attention_cov.yaml  attention_cov_sqrt.yaml  cov_pca.yaml  hybrid.yaml  (+5 more)
docs/: matrix_power_normalisation.md
scripts/: analyze_results.py  bias_checks.py  extract_embeddings.py  fit_pca_pool.py  make_plots.py  plot_results.py  run_experiment.py  run_experiment_aws.py  run_experiments_lxhalle.py  run_experiments_lxhalle_deeploc2.py  run_full_grid_aws.sh  run_on_aws.sh  train_unsupervised_pool.py
tests/: conftest.py  test_attention_covariance.py  test_covariance.py  test_covariance_pca.py  test_covariance_power_norm.py  test_frobenius_trainer.py  test_hybrid.py  test_light_attention.py  test_masking.py  test_matrix_power.py  test_mean.py  test_probe_train_loop.py
(+27 files in other folders)
