[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "second-order-pooling"
version = "0.1.0"
description = "Second-order (covariance) pooling for protein language models — PP1 SoSe2026"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "h5py>=3.9",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
extract = ["transformers>=4.38", "sentencepiece"]
vis = ["seaborn>=0.13", "umap-learn>=0.5"]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
